--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "async-file": "^2.0.2",
     "cheerio": "^1.0.0-rc.2",
     "delay": "^4.1.0",
+    "imap": "^0.8.19",
+    "mail-listener2": "^0.3.1",
+    "mailparser": "^2.6.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
     "node-telegram-bot-api": "^0.30.0",
